# template-python-package

./: README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: python-pkg-cd.yml  python-pkg-ci.yml  python-pkg.yml
src/pkg_template/: module.py
tests/: test_module.py
